fix icon alignment on homepage

--- a/client/app/assets/styles/tool-section.scss
+++ b/client/app/assets/styles/tool-section.scss
@@ -15,6 +15,8 @@ $tool-grey: #f8f9f9;
     margin-bottom: 10px;
     margin-top: 0;
     color: $white;
+    display: flex;
+    align-items: center;
   }
 
   .info-section {
